  on Mono 2.0 (bug #46375)
- fixed a small documentation bug related to our server compatibility
- fixed GetSByte method to actually return an sbyte  (bug #46620)
- changed MySqlStream.Read to throw an exception if the stream end is reached.  This is not ideal
  but we can't change it too much here in 5.2.8.  We'll look at a bigger change in 6.2. (bug #45978)

Version 5.2.7 7/13/09
- fixed procedure parameters collection so that an exception is thrown if we can't get the 
  parameters.  Also used this to optimize the procedure cache optimization
- Added "nvarchar" and "nchar" to possible data types returned by the DataSourceInformation
  schema collection so procs that use those types with parameters will work (bug #39409)
- fixed problem where the connector would incorrectly report the length of utf8 columns on servers
  6.0 and later.  This was caused by 6.0 now using 4 bytes for utf8 columns  
- fixed bug in role provider that was causing it to not correctly fetch the application
  id which caused it to incorrectly report roles (bug #44414)
- fixed Visual Studio 2005 solution so that it builds  
- fixed potential endless loop in CompressedStream in case where end of stream occurs before 
  packet is fully read (bug #43678)
- fixed ReservedWords schema collection to not incorrectly include blank words and to use the
  right column name
- fixed display of trigger names  
- restructured the connection open error handling so that socket exceptions come through 
  as the inner exception (bug #45021)  
- added workaround for an apparent problem with WeakReferences and threads in the mono runtime
  (bug #45463)
- removed our homebrew implemenation of CompilerGeneratedAttribute as it was interfering with
  the compiler in VS2005 (bug #42261)
- fix small bug in SchemaManager that would prevent the schema from being updated if the
  autogenerateschema option was given in anything but lower case  